Solve some whitespace and presentation issues

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -37,6 +37,7 @@ main {
     border-radius: 20px;
     display: flex;
     flex-direction: column;
+    margin-bottom: 3em;
     padding: 1em;
 }
 
