--- a/static/css/room.css
+++ b/static/css/room.css
@@ -330,6 +330,10 @@ main {
     width: 100%;
 }
 
+#message-box {
+    margin-bottom: 3em;
+}
+
 .thread {
     margin-bottom: .5em;
 }
